@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Fix handling of option "DeidentifyLogs", notably for tags (0010,0010) and (0010,0020)
+
 
 Version 1.9.7 (2021-08-31)
 ==========================
